# PSumSim

./: .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  LICENSE.md  README.md  pyproject.toml
doc/: .gitignore
doc/source/: apiindex.rst  changelog.md  commandlineinterface.rst  concepts.rst  conf.py  index.rst  license.md  readme.md  references.rst
psumsim/: __init__.py  __main__.py  array.py  experiments.py  hist.py  main_test.py  plot.py  rand.py  simulate.py  test.py
